# xbaxer

./: .gitignore  .gitmodules  Brewfile  CMakeLists.txt  LICENSE.MD  README.MD  Windows.ps1  main.py  pang.bat  requirements.txt
Cliant/: cmake.go  cmake_test.go  go.mod  main.go  main_test.go  probe.go
HelloBax/: go.mod  hello.cpp  hello.h  main.go
HelloWin/: MicrosoftGame.Config
HelloWin/TriangleC++/: .gitignore  CMakeLists.txt  TriangleApp.cpp
HelloWin/TriangleC++/.cliant-cmake/TriangleWinDurango/: build.ninja
HelloWin/TriangleC++/cmake/: xbax-remote-windows-toolchain.cmake
HelloWin/TriangleGo/: main.go
HelloWin/TriangleGo/.cliant-cmake/TriangleWinDurango/: CMakeCache.txt  cmake_install.cmake  compile_commands.json
HelloWin/okane/: CMakeLists.txt  CMakePresets.json  DeviceResources.cpp  Game.cpp  Game.h  Main.cpp  MicrosoftGameConfig.mgc  OkaneGpuBridge.cpp  OkaneGpuHasher.cpp  OkaneGpuHasher.h  OkaneMiner.cpp  OkaneMiner.h  README.md  SHA256Compute.hlsl  XboxConsoleStubs.cpp  gdk_build.props  grdk_toolchain.cmake  gxdk_toolchain.cmake  gxdk_xs_toolchain.cmake  pch.h
HelloWin/okane/include/: OkaneBridge.h
HelloWin/triangle-windurango/: CMakeLists.txt  README.md  TriangleApp.cpp
HelloWin/triangle-windurango/.cliant-cmake/TriangleWinDurango/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
HelloWin/triangle-windurango/cmake/: xbax-remote-windows-toolchain.cmake
HelloWin/triangle-windurango/windurango/: XGameRuntime.cpp  XGameRuntime.h  d3d11_x.cpp  kernelx.cpp  kernelx.h
Sarver/: go.mod  main.go  plan.go  plan_test.go  probe.go
anzipper/: go.mod  main.go
campiler/: build-campiler.sh
cleener/: go.mod  main.go
cleng/: README.md  build-clang-engine.sh  go.mod  main.go
cleng/cmake/: mingw-w64-x86_64.cmake
cleng/internal/cgobridge/: bridge.cpp  bridge.go  bridge_exec.go  bridge_link.go  bridge_link_generated.go  cleng_cc1_main_inc_windows_amd64.cpp  cleng_cc1as_main_inc.cpp  cleng_cc1gen_reproducer_main_inc_windows_amd64.cpp  cleng_driver_inc_windows_amd64.cpp
cleng/internal/cleng/: run.go  run_test.go
cleng/scripts/: copy_sysroot.cmake  gen_bridge_link.cmake
dastrabution/: go.mod  main.go
gatter/: go.mod  main.go
go/: CMakeLists.txt
go/src/: make.bat
go/src/cmd/go/internal/work/: exec.go
go/src/cmd/link/internal/ld/: go_test.go  lib.go  main.go  seh.go
led/: go.mod  main.go
